--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -3,7 +3,7 @@ table.users tr.invited td { color: #aaa; }
 </style>
 <h1>Lista użytkowników</h1>
 
-<table class="users">
+<table class="users table table-condensed top-buffer-20">
   <tr>
     <th>E-mail</th>
     <th>Imię</th>
