--- a/app/assets/javascripts/categories.js.erb
+++ b/app/assets/javascripts/categories.js.erb
@@ -15,7 +15,7 @@ $(document).ready(function(){
         complete: function(request){
           $(event.target).effect('highlight');
         },
-        url: '/<%=ENV["RAILS_RELATIVE_URL_ROOT"] %>/categories/sort'})
+        url: '<%=ENV["RAILS_RELATIVE_URL_ROOT"] %>/categories/sort'})
     }
   });
 });
