Szczegóły jednostki: ikonki zamiast słów 'TAK' i 'nie'.

--- a/app/views/units/show.html.erb
+++ b/app/views/units/show.html.erb
@@ -39,10 +39,10 @@
     <% if @unit.user_unit_associations.sort {|uua1, uua2| uua1.user.email <=> uua2.user.email }.each do |uua| %>
       <tr>
         <td><%= link_to uua.user.email, uua.user %></td>
-        <td><%= uua.can_view_entries ? "TAK" : "nie" %></td>
-        <td><%= uua.can_manage_entries ? "TAK" : "nie" %></td>
-        <td><%= uua.can_close_journals ? "TAK" : "nie" %></td>
-        <td><%= uua.can_manage_users ? "TAK" : "nie" %></td>
+        <td><%= render_boolean_icon_centered(uua.can_view_entries) %></td>
+        <td><%= render_boolean_icon_centered(uua.can_manage_entries) %></td>
+        <td><%= render_boolean_icon_centered(uua.can_close_journals) %></td>
+        <td><%= render_boolean_icon_centered(uua.can_manage_users) %></td>
         <td>
           <% if can? :update, @unit %> <%= link_to 'Edytuj', edit_user_unit_association_path(uua, :from => "unit") %> <% end %>
           <% if can? :update, @unit %> <%= link_to 'Usuń', user_unit_association_path(uua, :from => "unit"), data: { confirm: 'Na pewno usunąć powiązanie?'}, method: :delete %> <% end %>
