--- a/app/views/units/index.html.erb
+++ b/app/views/units/index.html.erb
@@ -4,7 +4,7 @@
   }
 </script>
 
-<h1>Drużyny</h1>
+<h3>Administracja &gt; Jednostki</h3>
 
 <table class="table table-condensed top-buffer-20">
   <tr>
