--- a/app/views/units/index.html.erb
+++ b/app/views/units/index.html.erb
@@ -26,9 +26,6 @@
           <% end %>
       </select>
     </th>
-    <th class="action-cell" rowspan="3"></th>
-    <th class="action-cell" rowspan="3"></th>
-    <th class="action-cell" rowspan="3"></th>
   </tr>
     <tr>
       <th colspan="2">finansowe</th>
@@ -36,22 +33,19 @@
     </tr>
     <tr>
         <th>&nbsp;</th>
-        <th>1%</th>
+        <th class="text-right">1%</th>
         <th>&nbsp;</th>
-        <th>1%</th>
+        <th class="text-right">1%</th>
     </tr>
 
 <% @units.each do |unit| %>
   <tr>
-    <td><%= unit.code %></td>
-    <td><%= unit.name %></td>
+    <td><div class="text-center"><%= link_to unit.code || "", unit %></div></td>
+    <td><div class="text-center"><%= link_to unit.name, unit %></div></td>
     <td class="amount-cell"><%= unit.initial_finance_balance(@selected_year) || '-' %></td>
     <td class="amount-cell"><%= unit.initial_finance_balance_one_percent(@selected_year) || '-' %></td>
     <td class="amount-cell"><%= unit.initial_bank_balance(@selected_year) || '-' %></td>
     <td class="amount-cell"><%= unit.initial_bank_balance_one_percent(@selected_year) || '-' %></td>
-    <td class="action-cell"><%= link_to 'Pokaż', unit %></td>
-    <td class="action-cell"><%= link_to 'Edytuj', edit_unit_path(unit) %></td>
-    <td class="action-cell"><%= link_to 'Usuń', unit, data: { confirm: 'Na pewno usunąć drużynę?'}, method: :delete %></td>
   </tr>
 <% end %>
 </table>
