Szczegóły jednostki: Zmiany w wyglądzie przycisków
* Przeniesienie przycisku edycji na górę po prawej.
* Dodanie przycisku usuwania na górze po prawej.

--- a/app/views/units/index.html.erb
+++ b/app/views/units/index.html.erb
@@ -10,7 +10,7 @@
   </div>
   <div class="span2">
     <div class="pull-right top-buffer-20">
-    <%= link_to 'Nowa drużyna', new_unit_path, class: "btn btn-small btn-primary" %>
+    <%= link_to 'Nowa jednostka', new_unit_path, class: "btn btn-small btn-primary" %>
     </div>
   </div>
 </div>
