--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,7 +1,19 @@
 <style type="text/css">
 table.users tr.invited td { color: #aaa; }
 </style>
-<h1>Lista użytkowników</h1>
+
+<div class="row">
+  <div class="span10">
+    <h3>Administracja &gt; Użytkownicy</h3>
+  </div>
+  <div class="span2">
+    <div class="pull-right top-buffer-20">
+      <% if can? :create, User %>
+        <%= link_to 'Nowy użytkownik', new_user_path, class: "btn btn-small btn-primary" %>
+      <% end %>
+    </div>
+  </div>
+</div>
 
 <table class="users table table-condensed top-buffer-20">
   <tr>
@@ -9,31 +21,24 @@ table.users tr.invited td { color: #aaa; }
     <th>Imię</th>
     <th>Nazwisko</th>
     <th>Telefon</th>
-    <th>Status</th>
+    <th class="text-center">Status</th>
     <% if can? :set_superadmin, @user %>
-      <th>Superadmin</th>
+      <th class="text-center">Superadmin</th>
     <% end %>
-    <th>Zablokowany</th>
-    <th colspan="3">Akcja</th>
+    <th class="text-center">Zablokowany</th>
   </tr>
 
 <% @users.each do |user| %>
   <tr class="<%= user.status %>">
-    <td><%= user.email %></td>
+    <td><%= link_to user.email, user %></td>
     <td><%= user.first_name %></td>
     <td><%= user.last_name %></td>
     <td><%= user.phone %></td>
-    <td><%= I18n.t(user.status) %></td>
+    <td class="text-center"><%= I18n.t(user.status) %></td>
     <% if can? :set_superadmin, @user %>
-      <td><%= user.is_superadmin ? "TAK" : "nie" %></td>
+      <td><%= render_boolean_icon_centered(user.is_superadmin) %></td>
     <% end %>
-    <td><%= user.is_blocked ? "TAK" : "nie" %></td>
-    <td><% if can? :read, user %><%= link_to 'Pokaż', user %><% end %></td>
-    <td><% if can? :update, user %><%= link_to 'Edytuj', edit_user_path(user) %><% end %></td>
+    <td><%= render_boolean_icon_centered(user.is_blocked) %></td>
   </tr>
 <% end %>
 </table>
-
-<br />
-
-<% if can? :create, User %><%= link_to "Nowy użytkownik", new_user_path, :accesskey => 'N' %><% end %>
