--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -1,19 +1,15 @@
-<div class="row">
-  <div class="span4">
-    <b>Nazwa:</b>
-    <%= @group.name %>
-  </div>
-  <div class="offset6 span2">
+<div class="well">
+  <div class="pull-right">
     <% if can? :update, @group %>
-        <div class="pull-left">
-          <%= link_to "Edytuj", edit_group_path(@group), class: 'btn btn-small btn-primary' %>
-        </div>
+        <%= link_to "Edytuj", edit_group_path(@group), class: 'btn btn-small btn-primary' %>
     <% end %>
     <% if can? :destroy, @group %>
-      <div class="pull-right">
-          <%= link_to 'Usuń grupę', @group, data: { confirm: 'Na pewno usunąć grupę?'}, method: :delete, class: 'btn btn-small btn-danger' %>
-      </div>
+        <%= link_to 'Usuń grupę', @group, data: { confirm: 'Na pewno usunąć grupę?'}, method: :delete, class: 'btn btn-small btn-danger' %>
     <% end %>
+  </div>
+  <div>
+    <b>Nazwa:</b>
+    <%= @group.name %>
   </div>
 </div>
 
