--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,36 @@
 <h1>Użytkownik <%= @user.email %></h1>
 
 <div class="well">
+  <div class="pull-right">
+    <% if can? :update, @user %>
+        <%= link_to 'Edytuj', edit_user_path(@user), :class => "btn btn-small btn-primary", :accesskey => 'e' %>
+        <% if @user.is_blocked %>
+            <%= link_to  'Odblokuj', unblock_user_path(@user),
+                         data: { confirm: 'Czy chcesz pozwolić użytkownikowi na zalogowanie się?'},
+                         :title => 'Umożliwia użytkownikowi zalogowanie się',
+                         :class => "btn btn-small btn-danger" %>
+        <% else %>
+            <%= link_to 'Zablokuj', block_user_path(@user),
+                        data: { confirm: 'Czy chcesz zablokować możliwość zalogowania się?'},
+                        :title => 'Pozbawia użytkownika możliwości zalogowania się',
+                        :class => "btn btn-small btn-danger" %>
+        <% end %>
+    <% end %>
+    <% if current_user.is_superadmin %>
+        <% if @user.is_superadmin %>
+            <%= link_to 'Zdegraduj', demote_user_path(@user),
+                        data: { confirm: 'Pozbawić użytkownika roli superadmina?'},
+                        :title => 'Pozbawia użytkownika roli superadmina',
+                        :class => "btn btn-small btn-danger" %>
+        <% else %>
+            <%= link_to 'Awansuj', promote_user_path(@user),
+                        data: { confirm: 'Awansować użytkownika do roli superadmina?'},
+                        :title => 'Awansuje użytkownika do roli superadmina',
+                        :class => "btn btn-small btn-danger" %>
+        <% end %>
+    <% end %>
+  </div>
+
   <p>
     <b>Adres e-mail:</b>
     <%= @user.email if @user.email %>
@@ -106,24 +136,6 @@
 
 <!--%= debug @user %-->
 <p>
-  <% if can? :update, @user %><%= link_to 'Edytuj', edit_user_path(@user), :accesskey => 'e' %> |<% end %>
-  <% if can? :update, @user %>
-    <% if @user.is_blocked %>
-      <%= link_to  'Odblokuj', unblock_user_path(@user), data: { confirm: 'Czy chcesz pozwolić użytkownikowi na zalogowanie się?'}, :title => 'Umożliwia użytkownikowi zalogowanie się' %> |
-    <% else %>
-      <%= link_to 'Zablokuj', block_user_path(@user), data: { confirm: 'Czy chcez zablokować możliwość zalogowania się?'}, :title => 'Pozbawia użytkownika możliwości zalogowania się' %> |
-    <% end %>
-  <% end %>
-  <% if current_user.is_superadmin %>
-    <% if @user.is_superadmin %>
-      <%= link_to 'Zdegraduj', demote_user_path(@user), data: { confirm: 'Pozbawić użytkownika roli superadmina?'}, :title => 'Pozbawia użytkownika roli superadmina' %> |
-    <% else %>
-      <%= link_to 'Awansuj', promote_user_path(@user), data: { confirm: 'Awansować użytkownika do roli superadmina?'}, :title => 'Awansuje użytkownika do roli superadmina' %>
-    <% end %>
-  <% end %>
-</p>
+  <%= link_to 'Powrót do listy', users_path, :accesskey => 'l', :class => "btn btn-small" %>
 
-<p>
-  <%= link_to 'Lista', users_path, :accesskey => 'l' %>
-  <% if can? :create, User %>| <%= link_to 'Nowy użytkownik', new_user_path, :accesskey => 'n' %><% end %>
 </p>
