Poprawki w wyglądzie audit logu (#64)

--- a/app/views/audits/index.html.erb
+++ b/app/views/audits/index.html.erb
@@ -2,26 +2,22 @@
 
 <table class="table table-condensed top-buffer-20">
   <tr>
-    <th>auditable_id</th>
-    <th>auditable_type</th>
+    <th>Obiekt</th>
     <th>user_id</th>
-    <th>username</th>
-    <th>action</th>
-    <th>audited_changes</th>
-    <th>version</th>
-    <th>remote_address</th>
-    <th>created_at</th>
+    <th>Użytkownik</th>
+    <th>Rodzaj zmiany</th>
+    <th>Zmiana</th>
+    <th>IP</th>
+    <th>Czas</th>
   </tr>
 
   <% @audits.each do |audit| %>
       <tr>
-        <td><%= audit.auditable_id %></td>
-        <td><%= audit.auditable_type %></td>
+        <td><%= audit.auditable_type %>(id: <%= audit.auditable_id%>)</td>
         <td><%= audit.user_id %></td>
         <td><%= audit.username %></td>
         <td><%= audit.action %></td>
         <td><%= audit.audited_changes %></td>
-        <td><%= audit.version %></td>
         <td><%= audit.remote_address %></td>
         <td><%= audit.created_at %></td>
       </tr>
